<resources>
    <string name="app_name">JetSurvey</string>
    <string name="app_description">Better surveys with Normal Views</string>
    <string name="form_action">Sign in or create an account</string>
    <string name="continue_sign_in">Continue</string>
    <string name="or">or</string>
    <string name="sign_in_guest">Sign in as guest</string>
    <string name="email_hint">Email</string>
    <string name="app_logo">App Logo</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous_action">Previous</string>
    <string name="next_action">Next</string>
    <string name="return_to_home">Return to Home</string>
    <string name="survey_first_question">In my free time I like to…</string>
    <string name="survey_selection">Select all that apply.</string>
    <string name="checkbox_read">Read</string>
    <string name="checkbox_work_out">Work out</string>
    <string name="checkbox_draw">Draw</string>
    <string name="checkbox_play_video_games">Play video games</string>
    <string name="fist_step">1</string>
    <string name="number_of_steps">of 5</string>
    <string name="spark_character">Spark</string>
    <string name="lenz_character">Lenz</string>
    <string name="bug_of_chaos_character">Bug of Chaos</string>
    <string name="frag_character">Frag</string>
    <string name="second_step">2</string>
    <string name="third_step">3</string>
    <string name="survey_third_question">When was the last time you ordered takeaway because you couldn\'t be bothered to cook?</string>
    <string name="survey_second_question">Pick a Views comic character</string>
    <string name="survey_character_selection">Select one.</string>
    <string name="survey_date_selection">Select date.</string>
</resources>