<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <LinearLayout
        android:id="@+id/textViewStepNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@id/linearProgressIndicator"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewCurrentStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:text="@string/fist_step"/>
        <TextView
            android:id="@+id/textViewFinalStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_steps"/>
    </LinearLayout>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintTop_toTopOf="@id/textViewStepNumber"
        app:layout_constraintBottom_toTopOf="@id/textViewSurveyQuestion"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:progress="25"/>
    <TextView
        android:id="@+id/textViewSurveyQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/linearProgressIndicator"
        app:layout_constraintBottom_toTopOf="@id/textViewInfo"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        android:textSize="20sp"
        android:text="@string/survey_first_question"
        />
    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewSurveyQuestion"
        app:layout_constraintBottom_toTopOf="@id/checkBoxRead"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        android:text="@string/survey_selection"/>

    <CheckBox
        android:id="@+id/checkBoxRead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintTop_toBottomOf="@id/textViewInfo"
        app:layout_constraintBottom_toTopOf="@id/checkBoxWorkOut"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:paddingVertical="28dp"
        android:text="@string/checkbox_read"
        android:background="@drawable/border"/>
    <CheckBox
        android:id="@+id/checkBoxWorkOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintTop_toBottomOf="@id/checkBoxRead"
        app:layout_constraintBottom_toTopOf="@id/checkBoxDraw"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:paddingVertical="28dp"
        android:text="@string/checkbox_work_out"
        android:background="@drawable/border"/>
    <CheckBox
        android:id="@+id/checkBoxDraw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintTop_toBottomOf="@id/checkBoxWorkOut"
        app:layout_constraintBottom_toTopOf="@id/checkBoxPlayVideoGames"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:paddingVertical="28dp"
        android:text="@string/checkbox_draw"
        android:background="@drawable/border"/>
    <CheckBox
        android:id="@+id/checkBoxPlayVideoGames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintTop_toBottomOf="@id/checkBoxDraw"
        app:layout_constraintBottom_toBottomOf="@id/materialButtonNext"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:paddingVertical="28dp"
        android:text="@string/checkbox_play_video_games"
        android:background="@drawable/border"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintTop_toBottomOf="@id/checkBoxPlayVideoGames"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:text="@string/next_action"/>
</androidx.constraintlayout.widget.ConstraintLayout>