<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignInNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textViewOr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/continue_sign_in"/>
        <TextView
            android:id="@+id/textViewOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/buttonSignInNormal"
            app:layout_constraintBottom_toTopOf="@id/buttonSignInGuest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/or"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignInGuest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintTop_toBottomOf="@id/textViewOr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textAllCaps="false"
            android:text="@string/sign_in_guest"/>
</androidx.constraintlayout.widget.ConstraintLayout>