<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <LinearLayout
        android:id="@+id/textViewStepNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@id/linearProgressIndicator"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewCurrentStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:text="@string/second_step"/>
        <TextView
            android:id="@+id/textViewFinalStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_steps"/>
    </LinearLayout>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintTop_toTopOf="@id/textViewStepNumber"
        app:layout_constraintBottom_toTopOf="@id/radioGroupComicCharacterChoices"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:progress="50"/>
    <RadioGroup
        android:id="@+id/radioGroupComicCharacterChoices"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/linearProgressIndicator"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutActions"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            android:paddingVertical="36dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:text="@string/spark_character"
            android:background="@drawable/border" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            android:paddingVertical="36dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:text="@string/lenz_character"
            android:background="@drawable/border"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            android:paddingVertical="36dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:text="@string/bug_of_chaos_character"
            android:background="@drawable/border"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            android:paddingVertical="36dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:text="@string/frag_character"
            android:background="@drawable/border"/>
    </RadioGroup>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/radioGroupComicCharacterChoices"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonPrevious"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/materialButtonNext"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textAllCaps="false"
            android:text="@string/previous_action"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/materialButtonPrevious"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/next_action"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>