<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraintLayoutActivityContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutActivityContent"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarActions"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"
            app:layout_constraintBottom_toTopOf="@id/textInputLayoutEmail"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignInGuest"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop"
            app:layout_constraintBottom_toTopOf="@id/textInputLayoutPassword"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            android:hint="@string/email_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
            app:layout_constraintBottom_toTopOf="@id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            android:hint="@string/password_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
            app:layout_constraintBottom_toTopOf="@id/buttonForgotPassword"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            android:text="@string/sign_in"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
            app:layout_constraintBottom_toTopOf="@id/textViewOr"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textAllCaps="false"
            android:text="@string/forgot_password"/>
        <TextView
            android:id="@+id/textViewOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonForgotPassword"
            app:layout_constraintBottom_toTopOf="@id/buttonSignInGuest"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            android:text="@string/or"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignInGuest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintTop_toBottomOf="@id/textViewOr"
            app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textAllCaps="false"
            android:text="@string/sign_in_guest"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>